--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A NodeJS reverse proxy to handle CSV downloads from Pyodide",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon ./server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
